# Rustaurant

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  down.sh  test.txt  up.sh
helm/rustaurant/: Chart.yaml
helm/rustaurant/templates/: monconf-configmap.yaml  monconf-statefulset.yaml
mongo_configs/: configsvr  mongokey  mongos  shard1  shard2  shard3
scraper/: package-lock.json  package.json  scraper.ts  tsconfig.json
src/: main.rs
src/api/: errors.rs  mod.rs  server.rs
src/auth/: auth.rs  controller.rs  middleware.rs  mod.rs
src/db/: db.rs
src/models/: mod.rs  restaurant.rs
src/models/restaurant/: restaurant.rs
src/models/user/: user.rs
src/restaurants/: contoller.rs  controller.rs  mod.rs  model.rs  resolver.rs  service.rs
src/routes/: routes.rs
src/server/: mod.rs  server.rs
src/users/: mod.rs  model.rs  service.rs
