[package]
name = "rustaurant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
dotenv = "0.15.0"
csv = "1.3.0"
reqwest = { version = "0.11.24", features = ["json"] }
axum = "0.7.4"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.114"
